[카드 추천] 🐿 유저별로 카드 추천 로직